src/test/ui/disallowed-deconstructing/disallowed-deconstructing-destructing-struct-match.nll.stderr
error[E0509]: cannot move out of type `X`, which implements the `Drop` trait
  --> $DIR/disallowed-deconstructing-destructing-struct-match.rs:24:11
   |
LL |     match x {
   |           ^ cannot move out of here
LL |         X { x: y } => println!("contents: {}", y)
   |                -
   |                |
   |                data moved here
   |                help: to prevent move, use ref or ref mut: `ref y`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0509`.
